feat: add CSV export option for album listing endpoints This commit introduces a new feature to export album listings from the YT Music and Spotify music APIs in CSV format. The following changes have been made:
- Implemented CSV export functionality for /ytmusic/albums/by-artist and /spmusic/albums/by-artist endpoints
- Added a new query parameter `?csv=true` to trigger CSV export
- Enhanced album listing endpoints to support CSV format
- Updated main.py to handle CSV generation and response formatting
- Added CSV export functionality to YT Music and Spotify album endpoints
- Updated pyproject.toml to include necessary dependencies for CSV handling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "python-dotenv[standard]>=1.1.0",
     "spotipy[standard]>=2.25.1",
     "uvicorn[standard]>=0.34.3",
+    "ytmusicapi>=1.10.3",
 ]
 
